openvidu-test-e2e: update rtstp server container to network host

--- a/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
@@ -126,6 +126,10 @@ mat-chip-row {
   margin-bottom: 7px;
 }
 
+#ingress-url-type-select {
+  margin-left: 6px;
+}
+
 #ingress-video-codec-select {
   margin-left: 6px;
 }
