openvidu-testapp: allow configuring URI for Ingress URL types

--- a/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
+++ b/openvidu-testapp/src/app/components/dialogs/room-api-dialog/room-api-dialog.component.css
@@ -39,6 +39,7 @@ mat-dialog-content button {
 .inner-text-input {
   margin-left: 6px;
   width: 22%;
+  min-width: 200px;
 }
 
 #clear-response-text-area-btn {
