--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -30,7 +30,8 @@
 	(onRoomCreated)="onRoomCreated.emit($event)"
 	(onParticipantCreated)="onParticipantCreated.emit($event)"
 	(onReadyToJoin)="onReadyToJoin.emit()"
-	(onRoomDisconnected)="_onRoomDisconnected()"
+	(onRoomDisconnected)="onRoomDisconnected.emit($event)"
+	(onParticipantLeft)="_onParticipantLeft($event)"
 	(onVideoEnabledChanged)="onVideoEnabledChanged.emit($event)"
 	(onVideoDeviceChanged)="onVideoDeviceChanged.emit($event)"
 	(onAudioEnabledChanged)="onAudioEnabledChanged.emit($event)"
