ov-components: Fixed nested event test

--- a/openvidu-components-angular/src/app/testing-app/testing.component.html
+++ b/openvidu-components-angular/src/app/testing-app/testing.component.html
@@ -93,7 +93,7 @@
 			(onFullscreenEnabledChanged)="appendElement('onFullscreenEnabledChanged')"
 			(onRecordingStartRequested)="appendElement('onRecordingStartRequested')"
 			(onRecordingStopRequested)="appendElement('onRecordingStopRequested')"
-			(onRoomDisconnected)="appendElement('onRoomDisconnected')"
+			(onParticipantLeft)="appendElement('onParticipantLeft')"
 			(onScreenShareEnabledChanged)="appendElement('onScreenShareEnabledChanged')"
 		>
 			<ng-template [ngIf]="ovToolbarAdditionalButtonsSelected">
