ov-components: rename participant created event to participant connected and update documentation

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
@@ -27,7 +27,8 @@
 			(onRoomReconnecting)="onRoomDisconnected.emit()"
 			(onRoomDisconnected)="onRoomDisconnected.emit()"
 			(onRoomReconnected)="onRoomReconnected.emit()"
-			(onParticipantCreated)="onParticipantCreated.emit($event)"
+			(onParticipantConnected)="onParticipantCreated.emit($event)"
+			(onParticipantConnected)="onParticipantConnected.emit($event)"
 		>
 			<ng-template #toolbar>
 				<ng-container *ngIf="openviduAngularToolbarTemplate">
