ov-components: add onParticipantLeft event and disconnect callback to notify when local participant leaves

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
@@ -29,6 +29,7 @@
 			(onRoomReconnected)="onRoomReconnected.emit()"
 			(onParticipantConnected)="onParticipantCreated.emit($event)"
 			(onParticipantConnected)="onParticipantConnected.emit($event)"
+			(onParticipantLeft)="_onParticipantLeft($event)"
 		>
 			<ng-template #toolbar>
 				<ng-container *ngIf="openviduAngularToolbarTemplate">
