--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -11,6 +11,8 @@
 	[participantName]="'Participant'"
 	[videoEnabled]="true"
 	[audioEnabled]="true"
+	[toolbarCameraButton]="true"
+	[toolbarMicrophoneButton]="true"
 	[toolbarScreenshareButton]="true"
 	[toolbarFullscreenButton]="true"
 	[toolbarRecordingButton]="true"
