--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/toolbar/toolbar.component.html
@@ -32,6 +32,7 @@
 		<button
 			id="camera-btn"
 			mat-icon-button
+			*ngIf="showCameraButton"
 			(click)="toggleCamera()"
 			[disabled]="isConnectionLost || !hasVideoDevices || cameraMuteChanging"
 			[class.warn-btn]="!isCameraEnabled"
@@ -46,6 +47,7 @@
 		<button
 			id="mic-btn"
 			mat-icon-button
+			*ngIf="showMicrophoneButton"
 			(click)="toggleMicrophone()"
 			[disabled]="isConnectionLost || !hasAudioDevices || microphoneMuteChanging"
 			[class.warn-btn]="!isMicrophoneEnabled"
