ov-components: add camera and microphone button visibility controls in the E2E tests

--- a/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
+++ b/openvidu-components-angular/src/app/openvidu-webcomponent/openvidu-webcomponent.component.html
@@ -9,6 +9,8 @@
 	[prejoin]="_prejoin"
 	[videoEnabled]="_videoEnabled"
 	[audioEnabled]="_audioEnabled"
+	[toolbarCameraButton]="_toolbarCameraButton"
+	[toolbarMicrophoneButton]="_toolbarMicrophoneButton"
 	[toolbarScreenshareButton]="_toolbarScreenshareButton"
 	[toolbarRecordingButton]="_toolbarRecordingButton"
 	[toolbarBroadcastingButton]="_toolbarBroadcastingButton"
