ov-components: add participant name visibility control to pre-join component

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.html
@@ -40,7 +40,7 @@
 					></ov-audio-devices-select>
 				</div>
 
-				<div class="participant-name-container">
+				<div class="participant-name-container" *ngIf="showParticipantName">
 					<ov-participant-name-input
 						[isPrejoinPage]="true"
 						[error]="!!_error"
