--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.scss
@@ -25,7 +25,7 @@
 		border-radius: var(--ov-surface-radius);
 		width: 90%;
 		max-width: 400px;
-		max-height: 650px;
+		// max-height: 650px;
 		height: min-content;
 		padding: 55px 40px;
 		background-color: var(--ov-surface-color);
