ov-components: add recordingStreamBaseUrl directive and integrate with config service for dynamic stream URL construction

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -11,6 +11,7 @@
 	[participantName]="'Participant'"
 	[videoEnabled]="true"
 	[audioEnabled]="true"
+	[recordingStreamBaseUrl]="'call/api/recordings'"
 	[toolbarCameraButton]="true"
 	[toolbarMicrophoneButton]="true"
 	[toolbarScreenshareButton]="true"
