ov-components: add participant left handling and update room disconnection logic

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -8,10 +8,10 @@
 		{ name: 'custom', lang: 'cus' }
 	]"
 	[prejoin]="true"
+	[prejoinDisplayParticipantName]="true"
 	[participantName]="'Participant'"
 	[videoEnabled]="true"
 	[audioEnabled]="true"
-	[recordingStreamBaseUrl]="'call/api/recordings'"
 	[toolbarCameraButton]="true"
 	[toolbarMicrophoneButton]="true"
 	[toolbarScreenshareButton]="true"
@@ -33,6 +33,7 @@
 	(onTokenRequested)="onTokenRequested($event)"
 	(onReadyToJoin)="onReadyToJoin()"
 	(onRoomCreated)="onRoomCreated($event)"
+	(onParticipantLeft)="onParticipantLeft($event)"
 	(onRoomDisconnected)="onRoomDisconnected()"
 	(onVideoEnabledChanged)="onVideoEnabledChanged($event)"
 	(onVideoDeviceChanged)="onVideoDeviceChanged($event)"
