ov-components: enhance testapp with dynamic configuration options

--- a/openvidu-components-angular/src/app/openvidu-call/call.component.html
+++ b/openvidu-components-angular/src/app/openvidu-call/call.component.html
@@ -1,53 +1,55 @@
-<ov-videoconference
-	[token]="token"
-	[tokenError]="tokenError"
-	[minimal]="false"
-	[lang]="'es'"
-	[langOptions]="[
-		{ name: 'Spanish', lang: 'es' },
-		{ name: 'custom', lang: 'cus' }
-	]"
-	[prejoin]="true"
-	[prejoinDisplayParticipantName]="true"
-	[participantName]="'Participant'"
-	[videoEnabled]="true"
-	[audioEnabled]="true"
-	[toolbarCameraButton]="true"
-	[toolbarMicrophoneButton]="true"
-	[toolbarScreenshareButton]="true"
-	[toolbarFullscreenButton]="true"
-	[toolbarRecordingButton]="true"
-	[toolbarBroadcastingButton]="true"
-	[toolbarBackgroundEffectsButton]="true"
-	[toolbarLeaveButton]="true"
-	[toolbarChatPanelButton]="true"
-	[toolbarParticipantsPanelButton]="true"
-	[toolbarDisplayLogo]="true"
-	[toolbarDisplayRoomName]="true"
-	[streamDisplayParticipantName]="true"
-	[streamDisplayAudioDetection]="true"
-	[streamVideoControls]="true"
-	[participantPanelItemMuteButton]="true"
-	[activitiesPanelRecordingActivity]="true"
-	[toolbarSettingsButton]="true"
-	(onTokenRequested)="onTokenRequested($event)"
-	(onReadyToJoin)="onReadyToJoin()"
-	(onRoomCreated)="onRoomCreated($event)"
-	(onParticipantLeft)="onParticipantLeft($event)"
-	(onRoomDisconnected)="onRoomDisconnected()"
-	(onVideoEnabledChanged)="onVideoEnabledChanged($event)"
-	(onVideoDeviceChanged)="onVideoDeviceChanged($event)"
-	(onAudioEnabledChanged)="onAudioEnabledChanged($event)"
-	(onAudioDeviceChanged)="onAudioDeviceChanged($event)"
-	(onLangChanged)="onLangChanged($event)"
-	(onScreenShareEnabledChanged)="onScreenShareEnabledChanged($event)"
-	(onFullscreenEnabledChanged)="onFullscreenEnabledChanged($event)"
-	(onParticipantsPanelStatusChanged)="onParticipantsPanelStatusChanged($event)"
-	(onChatPanelStatusChanged)="onChatPanelStatusChanged($event)"
-	(onRecordingStartRequested)="onRecordingStartRequested($event)"
-	(onRecordingStopRequested)="onRecordingStopRequested($event)"
-	(onRecordingDeleteRequested)="onRecordingDeleteRequested($event)"
-	(onBroadcastingStartRequested)="onBroadcastingStartRequested($event)"
-	(onBroadcastingStopRequested)="onBroadcastingStopRequested($event)"
->
-</ov-videoconference>
+@if (configReady) {
+	<ov-videoconference
+		[token]="token"
+		[tokenError]="tokenError"
+		[minimal]="minimal"
+		[lang]="lang"
+		[langOptions]="langOptions"
+		[prejoin]="prejoin"
+		[prejoinDisplayParticipantName]="prejoinDisplayParticipantName"
+		[participantName]="participantName"
+		[videoEnabled]="videoEnabled"
+		[audioEnabled]="audioEnabled"
+		[toolbarCameraButton]="toolbarCameraButton"
+		[toolbarMicrophoneButton]="toolbarMicrophoneButton"
+		[toolbarScreenshareButton]="toolbarScreenshareButton"
+		[toolbarFullscreenButton]="toolbarFullscreenButton"
+		[toolbarRecordingButton]="toolbarRecordingButton"
+		[toolbarBroadcastingButton]="toolbarBroadcastingButton"
+		[toolbarBackgroundEffectsButton]="toolbarBackgroundEffectsButton"
+		[toolbarLeaveButton]="toolbarLeaveButton"
+		[toolbarChatPanelButton]="toolbarChatPanelButton"
+		[toolbarParticipantsPanelButton]="toolbarParticipantsPanelButton"
+		[toolbarDisplayLogo]="toolbarDisplayLogo"
+		[toolbarDisplayRoomName]="toolbarDisplayRoomName"
+		[toolbarActivitiesPanelButton]="toolbarActivitiesPanelButton"
+		[streamDisplayParticipantName]="streamDisplayParticipantName"
+		[streamDisplayAudioDetection]="streamDisplayAudioDetection"
+		[streamVideoControls]="streamVideoControls"
+		[participantPanelItemMuteButton]="participantPanelItemMuteButton"
+		[activitiesPanelRecordingActivity]="activitiesPanelRecordingActivity"
+		[activitiesPanelBroadcastingActivity]="activitiesPanelBroadcastingActivity"
+		[toolbarSettingsButton]="toolbarSettingsButton"
+		(onTokenRequested)="onTokenRequested($event)"
+		(onReadyToJoin)="onReadyToJoin()"
+		(onRoomCreated)="onRoomCreated($event)"
+		(onParticipantLeft)="onParticipantLeft($event)"
+		(onRoomDisconnected)="onRoomDisconnected()"
+		(onVideoEnabledChanged)="onVideoEnabledChanged($event)"
+		(onVideoDeviceChanged)="onVideoDeviceChanged($event)"
+		(onAudioEnabledChanged)="onAudioEnabledChanged($event)"
+		(onAudioDeviceChanged)="onAudioDeviceChanged($event)"
+		(onLangChanged)="onLangChanged($event)"
+		(onScreenShareEnabledChanged)="onScreenShareEnabledChanged($event)"
+		(onFullscreenEnabledChanged)="onFullscreenEnabledChanged($event)"
+		(onParticipantsPanelStatusChanged)="onParticipantsPanelStatusChanged($event)"
+		(onChatPanelStatusChanged)="onChatPanelStatusChanged($event)"
+		(onRecordingStartRequested)="onRecordingStartRequested($event)"
+		(onRecordingStopRequested)="onRecordingStopRequested($event)"
+		(onRecordingDeleteRequested)="onRecordingDeleteRequested($event)"
+		(onBroadcastingStartRequested)="onBroadcastingStartRequested($event)"
+		(onBroadcastingStopRequested)="onBroadcastingStopRequested($event)"
+	>
+	</ov-videoconference>
+
+}
