ov-components: update onRoomDisconnected event to reference onParticipantLeft for deprecation notice

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/videoconference/videoconference.component.html
@@ -56,6 +56,7 @@
 	<ov-toolbar
 		id="default-toolbar"
 		(onParticipantLeft)="_onParticipantLeft($event)"
+		(onRoomDisconnected)="onRoomDisconnected.emit()"
 		(onVideoEnabledChanged)="onVideoEnabledChanged.emit($event)"
 		(onAudioEnabledChanged)="onAudioEnabledChanged.emit($event)"
 		(onScreenShareEnabledChanged)="onScreenShareEnabledChanged.emit($event)"
