openvidu-testapp: updated Angular Material to v15

--- a/openvidu-testapp/src/openvidu-theme.scss
+++ b/openvidu-testapp/src/openvidu-theme.scss
@@ -4,7 +4,16 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy(mat.define-legacy-typography-config());`
+@include mat.all-legacy-component-typographies();
+@include mat.legacy-core();
 
 $mat-openvidu: (
     50:  #eaeaea,
@@ -54,4 +63,4 @@ $openvidu-theme: mat.define-light-theme($openvidu-primary, $openvidu-accent, $op
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($openvidu-theme);
+@include mat.all-legacy-component-themes($openvidu-theme);
