ov-components: center progress spinner in loading container

--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/pre-join/pre-join.component.scss
@@ -14,6 +14,9 @@
 		right: 0;
 		text-align: center;
 		color: var(--ov-text-primary-color);
+		.mat-mdc-progress-spinner {
+			margin: auto;
+		}
 	}
 
 	#prejoin-card {
