--- a/openvidu-testapp/src/app/components/participant/participant.component.html
+++ b/openvidu-testapp/src/app/components/participant/participant.component.html
@@ -40,7 +40,7 @@
         <div class="event-list scroll-custom">
             <mat-accordion [attr.id]="index + '-participant-events-' + participant.identity">
                 <mat-expansion-panel *ngFor="let event of events"
-                    [ngClass]="event.eventCategory === 'ParticipantEvent' ? 'participant-event' : 'track-event'">
+                    [ngClass]="event.eventCategory">
                     <mat-expansion-panel-header [ngClass]="event.eventType + '-' + participant.identity"
                         [collapsedHeight]="'20px'" [expandedHeight]="'20px'">
                         {{event.eventType}}
